--- a/css/no-disponible.css
+++ b/css/no-disponible.css
@@ -1,3 +1,11 @@
-h1{
+.error{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     color: red;
+    height: 100vh;
+}
+p{
+    color: white;
 }
