--- a/css/practica.css
+++ b/css/practica.css
@@ -10,8 +10,8 @@
 }
 #check{
     display: none;
-}/*
-@media only screen and {max-width: 952px}{
+}
+@media (max-width: 952px){
     .menu-img{
         padding-left: 20px;
     }
@@ -19,7 +19,7 @@
         font-size: 16px;
     }
 }
-@media only screen and {max-width: 858px}{
+@media (max-width: 858px){
     .checkbtn{
         display: block;
     }
@@ -30,4 +30,4 @@
         background: #2c3e50;
         top: 80px;
     }
-}*/
+}
