--- a/css/practica.css
+++ b/css/practica.css
@@ -1,33 +1,64 @@
 #Titular{
-    padding-left: 10px;
+padding-left: 10px;
 }
 .checkbtn{
-    font-size: 30px;
-    float: right;
-    margin-right: 30px;
-    cursor: pointer;
-    display: none;
+font-size: 30px;
+float: right;
+margin-right: 30px;
+cursor: pointer;
+display: none;
 }
 #check{
+display: none;
+}
+.open-menu,
+.close-menu{
     display: none;
 }
-@media (max-width: 952px){
-    .menu-img{
-        padding-left: 20px;
+@media (max-width: 950px){
+    .nav-menu{
+    flex-direction: column;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    background-color: #334460;
+    overflow-y: auto;
+
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
     }
-    nav ul li s{
-        font-size: 16px;
+    .nav-menu li{
+    padding: 0;
     }
-}
-@media (max-width: 858px){
-    .checkbtn{
-        display: block;
+    .nav-menu a{
+    line-height: 60px;
     }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2c3e50;
-        top: 80px;
+    .open-menu,
+    .close-menu {
+    display: block;
+    border: none;
+    background: none;
+    cursor: pointer;
+    }
+    .close-menu{
+    align-self: flex-end;
+    padding: 200px 15px;
+    }
+    .menu_opened {
+        opacity: 1;
+        pointer-events: all;
+    }
+    .open-menu:focus:not(:focus-visible),
+    .close-menu:focus:not(:focus-visible) {
+    outline: none;
+    }
+    .YouTube{
+        /* display: none; */
+        width: auto;
+        height: auto;
     }
 }
