--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 a {
     color:white;
     text-decoration: none;
+    cursor: pointer;
 }
 a:hover{
     color: #ce7d35;
@@ -125,16 +126,15 @@ a:hover{
     outline: none;
     }
     .YouTube{
-        /* display: none; */
         width: auto;
         height: auto;
     }
     .img-head{
-        width: 50%;
+        width: 45%;
         height: auto;
     }
     .video{
-        width: auto;
+        width: 80%;
         height: auto;
     }
 }
