--- a/css/styles.css
+++ b/css/styles.css
@@ -29,10 +29,6 @@ a:hover{
     width: 90%;
     margin:auto;
 }
-#encabezado {
-    /* display: flex; */
-    justify-content: center;
-}
 /*Menu*/
 .nav-web {
     display: flex;
@@ -47,6 +43,7 @@ a:hover{
 .nav-img {
     display: flex;
     width: 50px;
+    border-radius: 100%;
 }
 /*nav-izq*/
 .nav-web > ul {
@@ -77,64 +74,18 @@ a:hover{
 }
 .menu-img{
     width: 20px;
-    border-radius: 50%;
 }
-.open-menu,
-.close-menu{
-    display: none;
-}
-/*RESPONSAVE*/
-@media (max-width: 850px){
-    .nav-menu{
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    background-color: #334460;
-    overflow-y: auto;
 
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.3s;
-    }
-    .nav-menu li{
-    padding: 0;
-    }
-    .nav-menu a{
-    line-height: 60px;
-    }
-    .open-menu,
-    .close-menu {
-    display: block;
-    border: none;
-    background: none;
+/*responsive for check*/
+/* .checkbtn{
+    font-size: 30px;
+    color: #fff;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
     cursor: pointer;
-    }
-    .close-menu{
-    align-self: flex-end;
-    padding: 200px 15px;
-    }
-    .menu-opened {
-        opacity: 1;
-        pointer-events: all;
-    }
-    .open-menu:focus:not(:focus-visible),
-    .close-menu:focus:not(:focus-visible) {
-    outline: none;
-    }
-    .YouTube{
-        width: auto;
-        height: auto;
-    }
-    .img-head{
-        width: 45%;
-        height: auto;
-    }
-    .video{
-        width: 100%;
-        height: auto;
-    }
-}
+    display: none;
+} */
+/* #check{
+    display: none;
+} */
